--- a/OpenGLAndroid/app/build.gradle
+++ b/OpenGLAndroid/app/build.gradle
@@ -17,6 +17,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++14"
+                arguments "-DANDROID_STL=c++_shared"
             }
         }
     }
@@ -29,7 +30,7 @@ android {
     externalNativeBuild {
         cmake {
             path "src/main/cpp/CMakeLists.txt"
-            version "3.16.2"
+            version "3.10.2"
         }
     }
 }
