--- a/OpenGLAndroid/app/src/main/cpp/CMakeLists.txt
+++ b/OpenGLAndroid/app/src/main/cpp/CMakeLists.txt
@@ -5,40 +5,33 @@
 
 cmake_minimum_required(VERSION 3.4.1)
 
+# Standard Android dependencies
+find_library(android-lib android)
+find_library(EGL-lib EGL)
+find_library(GLESv2-lib GLESv2)
+find_library(log-lib log)
+
+
 # Creates and names a library, sets it as either STATIC
 # or SHARED, and provides the relative paths to its source code.
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
 
-add_library( # Sets the name of the library.
-             native-lib
+# Sources
+file(GLOB native_srcs "*.cpp")
+# Output binary
+add_library(native-lib SHARED ${native_srcs})
 
-             # Sets the library as a shared library.
-             SHARED
-
-             # Provides a relative path to your source file(s).
-             native-lib.cpp )
-
-# Searches for a specified prebuilt library and stores the path as a
-# variable. Because CMake includes system libraries in the search path by
-# default, you only need to specify the name of the public NDK library
-# you want to add. CMake verifies that the library exists before
-# completing its build.
-
-find_library( # Sets the name of the path variable.
-              log-lib
-
-              # Specifies the name of the NDK library that
-              # you want CMake to locate.
-              log )
 
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
 
-target_link_libraries( # Specifies the target library.
-                       native-lib
-
-                       # Links the target library to the log library
-                       # included in the NDK.
-                       ${log-lib} )
+# Build
+target_link_libraries(native-lib
+            ${android-lib}
+            ${EGL-lib}
+            ${GLESv2-lib}
+            ${log-lib}
+            # ${libs_dir}/jni/${ANDROID_ABI}/libcardboard_api.so
+        )
